--- a/.github/workflows/1_2_c_promote_patch_to_stable.yml
+++ b/.github/workflows/1_2_c_promote_patch_to_stable.yml
@@ -14,6 +14,7 @@ env:
 jobs:
   bump:
     runs-on: ubuntu-latest
+    timeout-minutes: 7
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
