--- a/.github/workflows/1_check_for_updates.yml
+++ b/.github/workflows/1_check_for_updates.yml
@@ -14,6 +14,7 @@ jobs:
   check:
     name: Check for Prisma CLI update
     runs-on: ubuntu-latest
+    timeout-minutes: 7
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
