--- a/.github/workflows/4_bump_LS_in_extension.yml
+++ b/.github/workflows/4_bump_LS_in_extension.yml
@@ -25,6 +25,7 @@ jobs:
   bump:
     name: Bump LS in VSCode extension
     runs-on: ubuntu-latest
+    timeout-minutes: 7
     steps:
       - uses: actions/checkout@v3
         with:
