--- a/.github/workflows/PR_build_extension.yml
+++ b/.github/workflows/PR_build_extension.yml
@@ -22,6 +22,7 @@ jobs:
   build:
     name: Build extension
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     outputs:
       tag_name: ${{ steps.names.outputs.tag_name }}
     steps:
