Update vscode/package.json to include icon field

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -43,6 +43,10 @@
           "Prisma",
           "prisma"
         ],
+        "icon": {
+          "light": "./logo_white.png",
+          "dark": "./logo_white.png"
+        },
         "extensions": [
           ".prisma"
         ],
