feat: custom icon for .prisma files (#1263)

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -43,6 +43,10 @@
           "Prisma",
           "prisma"
         ],
+        "icon": {
+          "light": "./prisma_icon.svg",
+          "dark": "./prisma_icon.svg"
+        },
         "extensions": [
           ".prisma"
         ],
